Fixed contrast issue on upgrade links

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -140,6 +140,9 @@ main {
           width: 35%;
           height: auto;
         }
+        & a {
+          color: var(--white);
+        }
       }
     }
   }
